APEX-558: Added image style

--- a/source/themes/custom/apextoolgroup/styles/base/_variables.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_variables.scss
@@ -37,7 +37,7 @@ $font-size-12: 12px;
 /****** font weight ******/
 $bold: bold;
 $semi-bold: 600;
-$normal: normal;
+$normal: 400;
 $light: 300;
 
 /****** base path ******/
