--- a/source/themes/custom/apextoolgroup/styles/base/_typography.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_typography.scss
@@ -243,6 +243,8 @@ input[type='checkbox'] {
   border-radius: 0;
 }
 
+legend,
+legend .fieldset-legend,
 label {
   font-size: $p;
   color: $black;
@@ -266,4 +268,9 @@ img {
   max-width: 100%;
   width: auto;
   height: auto;
+}
+
+input[type='radio'] {
+  width: 20px;
+  height: 20px;
 }
