APEX-558: added responsive image for banner and slider

--- a/docroot/themes/custom/apextoolgroup/templates/block/block--bundle--hero-image.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/block/block--bundle--hero-image.html.twig
@@ -34,7 +34,7 @@
   ]
 %}
 
-<div {{attributes.addClass(classes)}} style="background-image: url('{{ hero_image_path }}');">
+<div {{attributes.addClass(classes)}}>
 
   {% if content.field_title.0 or content.body.0 %}
   <div class="hero-banner__caption">
