--- a/docroot/themes/custom/apextoolgroup/templates/node/node--markets--full.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/node/node--markets--full.html.twig
@@ -77,7 +77,7 @@
   ]
 %}
 
-<div class="hero-banner" style="background-image: url('{{ image_path }}');">
+<div class="hero-banner">
   {% if node.label or content.field_short_description.0 %}
   <div class="hero-banner__caption">
     <div class="container">
