--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--homepage_slider--slider-images.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view-fields--homepage_slider--slider-images.html.twig
@@ -1,4 +1,4 @@
-<div class="homepage-slider__item" style="background-image: url('{{ fields.field_media_image.content|render|trim|striptags|replace({'\n': '', '\r': '', '\t': ''}) }}');">
+<div class="homepage-slider__item-{{ entity_id }} slider-item">
   <div class="image">
     <div class="image-overlay">&nbsp;</div>
   </div>
