--- a/source/themes/custom/apextoolgroup/styles/components/_contact-us.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_contact-us.scss
@@ -19,6 +19,7 @@
           flex-wrap: wrap;
           align-items: center;
           justify-content: space-between;
+          margin-right: 0;
           @media only screen and(max-width: $desktop) {
             width: 33.33%;
           }
@@ -55,14 +56,42 @@
   }
 
   form {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    column-gap: 30px;
+    @media only screen and(max-width: $tablet-max) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media only screen and(max-width: $tablet) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
     .form-item {
+      width: 100%;
+
       &.form-composite,
       &.form-type-textarea {
         width: 100%;
+        grid-column: 1 / span 3;
+        @media only screen and(max-width: $tablet-max) {
+          grid-column: 1 / span 2;
+        }
+        @media only screen and(max-width: $tablet) {
+          grid-column: 1 / span 1;
+        }
       }
     }
 
     .form-actions  {
+      grid-column: 1 / span 3;
+      @media only screen and(max-width: $tablet-max) {
+        grid-column: 1 / span 2;
+      }
+      @media only screen and(max-width: $tablet) {
+        grid-column: 1 / span 1;
+      }
+
       .required-fields-contact {
         width: 100%;
         font-size: $p;
