--- a/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage-Slider.scss
@@ -4,7 +4,7 @@
   max-width: 100vw;
   width: 100%;
 
-  &__item {
+  .slider-item {
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -39,7 +39,7 @@
       width: 100%;
       height: 100%;
       color: $white;
-      padding: 150px 0 80px;
+      padding: 80px 0;
       position: relative;
       z-index: 3;
       @media only screen and (max-width: $tablet-max) {
@@ -97,6 +97,14 @@
       @media only screen and (max-width: $tablet-max) {
         width: 100%;
       }
+    }
+  }
+
+  .slick-slide {
+    height: 460px;
+    overflow: hidden;
+    @media only screen and (max-width: $tablet) {
+      height: 600px;
     }
   }
 
