APEX-576: Search page style

--- a/source/themes/custom/apextoolgroup/styles/components/_about-us.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_about-us.scss
@@ -89,6 +89,11 @@
 
   .market-container {
     overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 2px;
+      height: 2px;
+    }
   }
 
   .market-wrapper {
