--- a/source/themes/custom/apextoolgroup/styles/components/_application-form.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_application-form.scss
@@ -45,6 +45,7 @@
         position: relative;
         font-weight: $normal;
         background-color: transparent;
+        height: 100%;
 
         &:active,
         &:target,
