--- a/source/themes/custom/apextoolgroup/styles/components/_news.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_news.scss
@@ -52,6 +52,11 @@
       justify-content: flex-start;
       max-height: 300px;
       overflow: scroll;
+
+      &::-webkit-scrollbar {
+        width: 2px;
+        height: 2px;
+      }
     }
 
     .form-radio {
