--- a/source/themes/custom/apextoolgroup/styles/components/_brand-timeline.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_brand-timeline.scss
@@ -45,10 +45,20 @@
         @media only screen and (min-width: $tablet) and (max-width: $tablet-max)  {
           overflow: scroll;
           max-width: 740px;
+
+          &::-webkit-scrollbar {
+            width: 1px;
+            height: 1px;
+          }
         }
         @media only screen and (min-width: $tablet-max) {
           overflow: scroll;
           max-width: 1100px;
+
+          &::-webkit-scrollbar {
+            width: 1px;
+            height: 1px;
+          }
         }
       }
     }
@@ -146,6 +156,11 @@
           justify-content: flex-start;
           max-height: 300px;
           overflow: scroll;
+
+          &::-webkit-scrollbar {
+            width: 2px;
+            height: 2px;
+          }
         }
 
         .form-type-radio {
