--- a/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_homepage.scss
@@ -205,7 +205,12 @@
     position: relative;
     display: flex;
     width: 1100px;
-    overflow-x: scroll;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      width: 2px;
+      height: 2px;
+    }
     @media only screen and (max-width: $tablet-max) {
       width: 730px;
     }
@@ -216,6 +221,10 @@
     .views-row {
       flex: 0 0 355px;
       margin-right: 16px;
+
+      &:last-child {
+        margin-right: 0;
+      }
       @media only screen and (max-width: $tablet-max) {
         flex: 0 0 350px;
       }
