Apex-608: Office tab in contact us page issue fix.

--- a/docroot/themes/custom/apextoolgroup/templates/views/views-view--office--page.html.twig
+++ b/docroot/themes/custom/apextoolgroup/templates/views/views-view--office--page.html.twig
@@ -30,6 +30,7 @@
  * @see template_preprocess_views_view()
  */
 #}
+{{ attach_library('apextoolgroup/masonry') }}
 
 {% set content_classes = [] %}
 
