APEX-576: style for employee detail page.

--- a/source/themes/custom/apextoolgroup/styles/base/_form.scss
+++ b/source/themes/custom/apextoolgroup/styles/base/_form.scss
@@ -13,4 +13,9 @@ textarea {
     color: $black;
     border-color: $celtic-blue;
   }
+
+  &:-internal-autofill-selected,
+  &::-webkit-autofill {
+    background-color: transparent !important;
+  }
 }
