--- a/source/themes/custom/apextoolgroup/styles/components/_contact-us.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_contact-us.scss
@@ -83,6 +83,10 @@
       }
     }
 
+    select {
+      height: 64px;
+    }
+
     .form-actions  {
       grid-column: 1 / span 3;
       @media only screen and(max-width: $tablet-max) {
