--- a/source/themes/custom/apextoolgroup/styles/components/_offices.scss
+++ b/source/themes/custom/apextoolgroup/styles/components/_offices.scss
@@ -74,6 +74,7 @@
             font-size: $p;
             display: block;
             color: $black;
+            cursor: pointer;
             margin: 0 0 20px;
             line-height: 22.4px;
             font-weight: $semi-bold;
@@ -194,6 +195,7 @@
             width: 100%;
             color: $black;
             font-size: $h5;
+            cursor: pointer;
             font-weight: $normal;
 
             a {
