--- a/docroot/themes/custom/apex_tools/templates/layout/html.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/layout/html.html.twig
@@ -39,8 +39,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width"/>
-
-  <link rel="shortcut icon" href="{{ mix('dist/img/favicon.png') }}" />
+  <link rel="shortcut icon" href="{{ mix('dist/img/favicon.ico') }}"/>
   <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 
