--- a/docroot/themes/custom/apex_tools/src/scss/components/_filter-bar.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_filter-bar.scss
@@ -42,6 +42,7 @@ $filter-bar-border-color: rgba($color-gray-light, 0.5);
 }
 
 .filter-label {
+    opacity: 0;
     position: absolute;
     top: 0.75rem;
     left: 1.5rem;
