APEX-621: Download page style

--- a/docroot/themes/custom/apex_tools/src/scss/_variables.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/_variables.scss
@@ -13,6 +13,7 @@ $color-green: #417505;
 $color-blue: #57c0e8;
 $color-primary-blue: #0040ff;
 $color-accent-bg: mix($color-gray-light, #fff, 16%);
+$color-platinum: #E5E5E5;
 
 /**
  * FONTS
