Apex-579: Removed opacity property in filter label.

--- a/docroot/themes/custom/apex_tools/src/scss/components/_geoui.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_geoui.scss
@@ -1,5 +1,6 @@
 .geoui {
     position: relative;
+    padding: 1rem 0;
 
     .mega-table {
         margin-bottom: 0;
@@ -87,16 +88,10 @@
 }
 
 .geoui-interstitial {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
     z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba($color-off-black, 0.75);
     color: #fff;
 
     @media only screen and(max-width: $media-screen-tablet) {
