feature/APEX-579: AT- changed local rep page name and labels

--- a/docroot/themes/custom/apex_tools/templates/node/node--geo-directory.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/node/node--geo-directory.html.twig
@@ -7,14 +7,14 @@
   <template slot="interstitial" slot-scope="scope">
     <header class="geoui-interstitial-header">
       <h2 class="geoui-interstitial-title">{{ node.title.value }}</h2>
-      <p>{{ 'Enter your State below to find an agency near you' | t }}</p>
+      <p>{{ 'Enter your State below to find a Local Rep near you' | t }}</p>
     </header>
 
     <scoped-form class="form-bar form-bar--centered form-bar--wrap" :filters="scope.filters" :value="scope.state" @input="scope.setState">
       <template slot-scope="bar">
         <filter-bar-item v-model="bar.state.q" element="select" :options="{{ state_options | json_encode }}"></filter-bar-item>
         <div class="form-bar-item">
-          <button type="submit" class="button button--primary button--simple">{{ 'Find Agencies'|t }}</button>
+          <button type="submit" class="button button--primary button--simple">{{ 'Find Local Rep'|t }}</button>
         </div>
       </template>
     </scoped-form>
@@ -24,7 +24,7 @@
       <template slot-scope="bar">
         <filter-bar-item v-model="bar.state.q" label="State" element="select" :options="{{ state_options | json_encode }}"></filter-bar-item>
         <filter-bar-item element="action" class="filter-bar-item--push">
-          <button type="submit" class="button button--primary button--simple">{{ 'Find Agencies'|t }}</button>
+          <button type="submit" class="button button--primary button--simple">{{ 'Find Local Rep'|t }}</button>
         </filter-bar-item>
       </template>
     </scoped-form>
@@ -52,8 +52,8 @@
     </div>
   </template> #}
   <template slot="list" slot-scope="scope">
-    <table-component :data="scope.data" :show-filter="false" :show-caption="false" :cache-lifetime="0" sort-by="attributes.title" sort-order="asc" class="mega-table-component" table-class="mega-table" :filter-no-results="'{{ 'No Agencies found within ' | t }}' + scope.state.q">
-      <table-column label="AGENCY" show="attributes.title">
+    <table-component :data="scope.data" :show-filter="false" :show-caption="false" :cache-lifetime="0" sort-by="attributes.title" sort-order="asc" class="mega-table-component" table-class="mega-table" :filter-no-results="'{{ 'No Local Rep found within ' | t }}' + scope.state.q">
+      <table-column label="Local Rep" show="attributes.title">
         <template slot-scope="row">
           {% filter raw %}
             <h3 :id="'distributor-' + row.id" v-html="row.attributes.title"></h3>
