Updating footer social links

--- a/docroot/themes/custom/apex_tools/templates/includes/footer.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/includes/footer.html.twig
@@ -21,8 +21,7 @@
     {{ page.footer_nav }}
   </div>
   <nav class="nav nav--social">
-    <a href="https://twitter.com/APEXTools_" class="nav-link">{{ svg('dist/img/icons/twitter.svg') }}</a>
-    <a href="https://www.facebook.com/APEXToolsGlobal/" class="nav-link">{{ svg('dist/img/icons/facebook.svg') }}</a>
+    <a href="https://www.linkedin.com/company/apex-assembly-fabrication-tools/" class="nav-link">{{ svg('dist/img/icons/linkedin.svg') }}</a>
     <a href="https://www.youtube.com/channel/UC1OYWJvXjkFvBycXO1AkNUQ" class="nav-link">{{ svg('dist/img/icons/youtube.svg') }}</a>
   </nav>
   <div class="footer-secondary">
