APS-161 Change logo header strip style.

--- a/docroot/themes/custom/cleco/src/scss/components/_dropdown.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_dropdown.scss
@@ -65,13 +65,9 @@
 }
 
 .dropdown-toggle .links li {
-    display:inline;
-}
-
-.dropdown-toggle .links li:after {
-    content: "|";
-    padding-left:.5rem;
-    padding-right:.5rem
+  display: inline;
+  padding-left: .5rem;
+  padding-right: .5rem;
 }
 
 .dropdown-toggle .links li:last-child:after {
@@ -79,11 +75,7 @@
 }
 
 .dropdown-toggle .links li a{
-    color:black
-}
-
-.dropdown-toggle .links li a{
-    color:black
+  color: $color-white;
 }
 
 .dropdown .dropdown-menu{
@@ -91,5 +83,5 @@
 }
 
 .dropdown-toggle .links .is-active a{
-    color:red;
+  color: $color-orange;
 }
