--- a/docroot/themes/custom/cleco/src/scss/components/_header.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_header.scss
@@ -100,13 +100,47 @@
   width: 6.625rem;
   height: 1.5rem;
 
+  &::before {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: -23px;
+    width: 23%;
+    height: 72px;
+    margin-left: 20px;
+    background-color: $color-orange;
+    z-index: -1;
+  }
+
+  @media only screen and (max-width: $media-screen-medium) {
+    &::before {
+      width: 27%;
+    }
+  }
+
+  @media only screen and (max-width: $breakpoint-type) {
+    &::before {
+      height: 64px;
+    }
+  }
+
   @media only screen and (max-width: $media-screen-mobile) {
     width: 100px;
+
+    &::before {
+      width: 35%;
+      height: 60px;
+      top: -4px;
+    }
   }
 
   svg {
     width: 100%;
     height: 100%;
+
+    g {
+      fill: $color-off-black;
+    }
   }
 
   @media (min-width: 800px) {
@@ -252,6 +286,8 @@
  */
 .masthead-utility {
   border-bottom: 0.0625rem solid rgba($color-gray-light, 0.43);
+  background-color: $color-off-black;
+
   @media only screen and (max-width: $media-screen-mobile) {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -281,7 +317,7 @@
 /**
  * LAYOUT: STACKED
  */
-@media (max-width: $breakpoint-nav-inline - 1) {
+@media (max-width: ($breakpoint-nav-inline - 1)) {
   .masthead-primary {
     // flex-flow: row wrap;
 
