--- a/docroot/themes/custom/cleco/src/scss/components/_nav--header-utils.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_nav--header-utils.scss
@@ -19,7 +19,7 @@ nav[class*='nav--header-utils'] {
     font-size: 0.75em;
     font-weight: 500;
     line-height: $line-height-tight;
-    color: $color-off-black;
+    color: $color-orange;
     text-align: center;
     margin-bottom: -1px;
 
