APEX-639: Removing share block

--- a/docroot/themes/custom/apex_tools/templates/layout/page--news-media.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/layout/page--news-media.html.twig
@@ -1,6 +1,8 @@
-<div class="breadcrumb-wrap">
-	{{ page.breadcrumb }}
-</div>
+{% if page.breadcrumb %}
+  <div class="breadcrumb-wrap">
+    {{ page.breadcrumb }}
+  </div>
+{% endif %}
 {{ page.header }}
 <main class="main">
 	<section class="section">
