--- a/docroot/themes/custom/apex_tools/templates/layout/page.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/layout/page.html.twig
@@ -1,6 +1,8 @@
-<div class="breadcrumb-wrap">
-  {{ page.breadcrumb }}
-</div>
+{% if page.breadcrumb %}
+  <div class="breadcrumb-wrap">
+    {{ page.breadcrumb }}
+  </div>
+{% endif %}
 
 {{ page.header }}
 {{ page.content }}
