--- a/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
+++ b/docroot/themes/custom/atg/templates/paragraphs/paragraph--featured-products.html.twig
@@ -18,7 +18,7 @@
         <div class="section-main">
             <ul class="listings">
               {% set locale  = get_locale() %}
-              {% set alias   = alias_by_path('/products/product-catalog', locale.code) %}
+              {% set alias   = alias_by_path('/tools/tool-catalog', locale.code) %}
               {% set baseUrl = locale.path ~ alias ~ '/' %}
 
               {% for index, item in featured_products %}
