APS-163: code done for frontend for image and video hero banner.

--- a/docroot/themes/custom/cleco/src/scss/components/_hero.scss
+++ b/docroot/themes/custom/cleco/src/scss/components/_hero.scss
@@ -61,6 +61,22 @@ $hero-height-map: (
   min-height: 100%;
 }
 
+/* css for hero image video */
+
+.hero-image {
+  video {
+    width: 100% !important;
+    object-fit: cover !important;
+    cursor: pointer !important;
+    @media only screen and (min-width: $breakpoint-hero-title-md) {
+     height: 100%;
+    }
+    &::-webkit-media-controls-panel {
+      display: none;
+    }
+  }
+}
+
 /**
  * HERO TEXT
  */
