--- a/docroot/themes/custom/apex_tools/templates/views/views-view-unformatted--hubspot_forms--hubspot_title_icon.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/views/views-view-unformatted--hubspot_forms--hubspot_title_icon.html.twig
@@ -18,12 +18,12 @@
 
 <section class="section section--form">
   <div class="form-selector">
-  <ul class="tabs form-selector-step">
+  <ul class="hubspot-tabs form-selector-step">
     <div class="checkable-cards">
       {% for row in rows %}
         {%
           set row_classes = [
-            default_row_class ? 'views-row',
+            default_row_class ? 'views-row checkable-cards-item',
           ]
         %}
         <li{{ row.attributes.addClass(row_classes) }}>
@@ -32,7 +32,7 @@
       {% endfor %}
     </div>
   </ul>
-  <ul class="tabs-content form-selector-step">
+  <ul class="hubspot-tabs-content form-selector-step">
   {{ card }}
   </ul>
   </div>
