--- a/docroot/themes/custom/apex_tools/src/scss/components/_form-selector.scss
+++ b/docroot/themes/custom/apex_tools/src/scss/components/_form-selector.scss
@@ -18,3 +18,17 @@
         margin-right: 0.5em;
     }
 }
+
+.hubspot-tabs-content {
+  &.form-selector-step {
+    border-top: 0;
+    padding-top: 0;
+    margin-top: 0;
+  }
+
+  .views-row {
+    border-top: 1px solid $color-gray-light;
+    padding-top: 2rem;
+    margin-top: 2rem;
+  }
+}
