APEX-330: Hubspot foms

--- a/docroot/themes/custom/apex_tools/templates/views/views-view-unformatted--hubspot_forms--hubspot_title_icon.html.twig
+++ b/docroot/themes/custom/apex_tools/templates/views/views-view-unformatted--hubspot_forms--hubspot_title_icon.html.twig
@@ -17,8 +17,10 @@
 #}
 
 <section class="section section--form">
+  <header class="section-header"><h2 class="section-title">{{ 'Connect with a'|t }}<em>{{ ' Solutions Expert'|t }}</em></h2></header>
   <div class="form-selector">
   <ul class="hubspot-tabs form-selector-step">
+  <h2 class="form-selector-step-title">{{ 'How can we help?'|t }}</h2>
     <div class="checkable-cards">
       {% for row in rows %}
         {%
